Update about.md, 2022-11-1-thesis.md, and 3 more files...

--- a/_project/2023-05-01-ALK-GNN.md
+++ b/_project/2023-05-01-ALK-GNN.md
@@ -1,6 +1,6 @@
 ---
 title: "Graph Neural Network for ALK inhibitors"
-excerpt: "This is a repository containing one part of Trinh The Chuong thesis <br/><img src='/images/GNN-ALK/GNN.png'>"
+excerpt: "This is a repository containing one part of Trinh The Chuong's thesis <br/><img src='/images/GNN-ALK/GNN.png'>"
 collection: project
 ---
 
