Update cv.md, 2022-11-1-thesis.md, and 3 more files...

--- a/_project/2022-11-1-thesis.md
+++ b/_project/2022-11-1-thesis.md
@@ -1,6 +1,6 @@
 ---
 title: "In silico modeling for prediction of potential HIV integrase inhibitors "
-excerpt: "This is a repository containing Tieu Long Phan master thesis <br/><img src='/images/Thesis/thesis.jpg'>"
+excerpt: "This is a repository containing Tieu Long Phan master thesis <br/><img src='/images/Thesis/thesis.png'>"
 collection: project
 ---
 
@@ -10,7 +10,9 @@ Updating...
 
 ## Workflow
 The project contains four parts:
-- 
+- Pharmacophore modeling: automated results extraction and comparasion; ensemble learning to enhance performance
+- QSAR (Classification and regression tasks): develop full data pipeline and statistical test
+- Molecular docking: using five docking softwares to perform retrospective control
 
 ## Requirements
 
