--- a/_portfolio/2023-05-02-mlqsar.md
+++ b/_portfolio/2023-05-02-mlqsar.md
@@ -7,7 +7,8 @@ collection: portfolio
 
 ## mlqsar
 - Automated QSAR modeling
-- Statistical test for decision making to select optimal data
+- Benchmark analysis
+- Data category selection via rigorous statistical evaluation.
 
 
 ## Requirements
@@ -28,5 +29,4 @@ Updating...
 ## Contributing
 
 Please visit the [mlqsar](https://github.com/TieuLongPhan/mlqsar) repository.
-Pull requests are welcome. For major changes, please open an issue first to discuss what you would like to change. Please make sure to update tests as appropriate.
 
