--- a/_portfolio/2023-05-02-mlqsar.md
+++ b/_portfolio/2023-05-02-mlqsar.md
@@ -1,6 +1,6 @@
 ---
 title: "MLQSAR"
-excerpt: "This is a repository to for automated docking score extraction and validation from different softwares <br/><img src='/images/mlqsar/QSAR.png' width='800' class='center'>"
+excerpt: "This is a repository to for automated docking score extraction and validation from different softwares <br/><img src='/images/ml_qsar/QSAR.png' width='800' class='center'>"
 collection: portfolio
 ---
 
